main activity re-format

--- a/app/src/main/assets/editor.html
+++ b/app/src/main/assets/editor.html
@@ -8,7 +8,12 @@
     body {
         overflow: hidden;
     }
-
+      div.ace_layer.ace_gutter-layer.ace_folding-enabled{
+      width: 21px !important;
+      }
+      div.ace_gutter-cell{
+      padding-left: 0 !important;
+      }
     #editor {
         margin: 0;
         position: absolute;
