main activity re-format

--- a/app/src/main/assets/editor.html
+++ b/app/src/main/assets/editor.html
@@ -35,9 +35,9 @@
 
 <script src="src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/twilight");
-    editor.session.setMode("ace/mode/fortran");
+    window.editor = ace.edit("editor");
+    window.editor.setTheme("ace/theme/twilight");
+    window.editor.session.setMode("ace/mode/fortran");
 
 </script>
 
